# quillpen

./: .gitignore  .vimrc  BUILD  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  cert.pem  deps.bzl  docker-compose.yaml  go.mod  go.sum  index.html  main.go  private_key.pem  renovate.json  skaffold.yaml
.github/workflows/: dependency-review.yml  go.yml  lint.yaml
accounts/: BUILD.bazel  accounts.go  lookup.go  profile.go  signin.go  signup.go
chat/: BUILD.bazel  chat.go  conversations.go  hub.go
deploy/quillpen/: Chart.yaml  values.yaml
deploy/quillpen/aws/: lb-controller-sa.yaml  lb_iam_policy.json  lb_trust_policy.json
deploy/quillpen/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/quillpen/templates/tests/: test-connection.yaml
editor/: BUILD.bazel  editor.go
login/: login.go
models/: BUILD.bazel  models.go
pkg/accounts/: BUILD.bazel  accounts.go  profile.go  signin.go  signup.go
pkg/chat/: BUILD.bazel  chat.go  conversations.go  hub.go
pkg/editor/: BUILD.bazel  editor.go
pkg/posts/: BUILD.bazel  handlers.go  posts.go
pkg/sessionManager/: BUILD.bazel
pkg/storage/: BUILD.bazel  initdb.go  session.go  storage.go
pkg/tls/: BUILD.bazel  tls.go
posts/: BUILD.bazel  handlers.go  posts.go
sessionManager/: session.go
signup/: signup.go
storage/: BUILD.bazel  accounts.go  document_db.go  initdb.go  posts.go  session.go  storage.go
templates/: editor.html  index.html  login.html  posts.html  postsignup.html  signup.html
