###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "quillpen",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_go", version = "0.50.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk_dev = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk_dev.download(version = "1.23.0")

go_sdk.download(version = "1.23.1")

# Alternately, download an SDK for a fixed OS/architecture.

# Known to exist since it is instantiated by rules_go itself.
use_repo(
    go_sdk_dev,
    go_sdk = "go_default_sdk",
)

# Known to exist since it is instantiated by rules_go itself.
use_repo(
    go_sdk,
    "go_host_compatible_sdk_label",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:k8NLag8AGHnn+PHbl7g43CtqZAwG60vZkLqgyZgIHgQ=",
    version = "v0.18.0",
)
use_repo(
    go_deps,
    "com_github_gocql_gocql",
    "com_github_gorilla_handlers",
    "com_github_gorilla_mux",
    "com_github_gorilla_sessions",
    "com_github_gorilla_websocket",
    "org_golang_x_crypto",
    "org_golang_x_tools",
)

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True, repo_name = "io_bazel_stardoc")

############################################################
# Define your own dependencies here using go_repository.
# Else, dependencies declared by rules_go/gazelle will be used.
# The first declaration of an external repository "wins".
############################################################

bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.0")
