load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "accounts",
    srcs = [
        "accounts.go",
        "signin.go",
        "signup.go",
    ],
    importpath = "github.com/quillpen/accounts",
    visibility = ["//visibility:public"],
    deps = [
        "//models",
        "//storage",
        "@com_github_gocql_gocql//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
