load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = ["models.go"],
    importpath = "github.com/quillpen/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gocql_gocql//:gocql",
        "@org_golang_x_crypto//bcrypt",
    ],
)
