load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "accounts",
    srcs = [
        "accounts.go",
        "lookup.go",
        "profile.go",
        "signin.go",
        "signup.go",
    ],
    importpath = "github.com/quillpen/pkg/accounts",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sessionManager",
        "//pkg/storage",
        "@com_github_gocql_gocql//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
