load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "initdb.go",
        "session.go",
        "storage.go",
    ],
    importpath = "github.com/quillpen/pkg/storage",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gocql_gocql//:go_default_library"],
)
